# keystone_zero_proof

./: README.md
zkid-acl/: CMakeLists.txt  README.md
zkid-acl/eapp1/: enclave1.c
zkid-acl/eapp2/: enclave2.c
zkid-acl/host/: host.cpp
zkid-acl/zklib/: Cargo.toml  build-zklib.sh  cbindgen.toml
zkid-acl/zklib/.cargo/: config.toml
zkid-acl/zklib/src/: lib.rs
zkid-vc/: .gitignore  CMakeLists.txt  README.md  build.sh
zkid-vc/eapp1/: enclave1.c
zkid-vc/eapp2/: enclave2.c
zkid-vc/host/: host.cpp  host.h
zkid-vc/zklib/: Cargo.toml  build-zklib.sh  cbindgen.toml
zkid-vc/zklib/src/: lib.rs
