[package]
name = "zklib-vc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
ark-groth16 = { version = "0.4", default-features = false, features = ["std"] }
ark-bn254 = { version = "0.4", default-features = false, features = ["std", "curve"] }
ark-ec = { version = "0.4", default-features = false, features = ["std"] }
ark-ff = { version = "0.4", default-features = false, features = ["std"] }
ark-std = { version = "0.4", default-features = false, features = ["std"] }
ark-serialize = { version = "0.4", default-features = false, features = ["std"] }
ark-relations = { version = "0.4", default-features = false, features = ["std"] }
ark-snark = { version = "0.4" }
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2.0", default-features = false, features = ["std", "rand_core"] }
rand_core = { version = "0.6", features = ["std"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true


